core/dataguard-fieldpaths/generated-src/main/java/com/linkedin/dataguard/runtime/fieldpaths/virtual/parsing/VirtualFieldPathParser.java
// Generated from com/linkedin/dataguard/runtime/fieldpaths/virtual/VirtualFieldPath.g4 by ANTLR 4.9.3

    package com.linkedin.dataguard.runtime.fieldpaths.virtual.parsing;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class VirtualFieldPathParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, LEFT_PAREN=3, RIGHT_PAREN=4, LEFT_BRACKET=5, RIGHT_BRACKET=6, 
		LEFT_CURLY=7, RIGHT_CURLY=8, QUESTION_MARK=9, DOT=10, COLON=11, ASTERISK=12, 
		DIVISION_OP=13, MOD_OP=14, PLUS=15, MINUS=16, CONTEXT_VARIABLE=17, CURRENT_VARIABLE=18, 
		AND_OP=19, OR_OP=20, NOT_OP=21, IN_OP=22, EQUALITY_OP=23, INEQUALITY_OP=24, 
		LT_OP=25, GT_OP=26, LTE_OP=27, GTE_OP=28, TRUE=29, FALSE=30, DECIMAL_VALUE=31, 
		INTEGER_VALUE=32, STRING=33, IDENTIFIER=34, WS=35, ANY=36;
	public static final int
		RULE_mountedPath = 0, RULE_rowSelectorAwareFieldPath = 1, RULE_virtualFieldPath = 2, 
		RULE_mountPoint = 3, RULE_rowSelector = 4, RULE_fieldReferenceExpr = 5, 
		RULE_collectionPredicate = 6, RULE_predicate = 7, RULE_predicateWithParenthesis = 8, 
		RULE_expr = 9, RULE_literal = 10, RULE_functionCall = 11, RULE_numericLiteral = 12, 
		RULE_sign = 13, RULE_stringLiteral = 14, RULE_booleanLiteral = 15, RULE_variable = 16, 
		RULE_comparisonOperator = 17, RULE_multiplicativeOperator = 18, RULE_additiveOperator = 19, 
		RULE_identifier = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"mountedPath", "rowSelectorAwareFieldPath", "virtualFieldPath", "mountPoint", 
			"rowSelector", "fieldReferenceExpr", "collectionPredicate", "predicate", 
			"predicateWithParenthesis", "expr", "literal", "functionCall", "numericLiteral", 
			"sign", "stringLiteral", "booleanLiteral", "variable", "comparisonOperator", 
			"multiplicativeOperator", "additiveOperator", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'mount_point='", "','", "'('", "')'", "'['", "']'", "'{'", "'}'", 
			"'?'", "'.'", "':'", "'*'", "'/'", "'%'", "'+'", "'-'", "'$'", "'@'", 
			"'&&'", "'||'", "'!'", "'IN'", "'=='", "'!='", "'<'", "'>'", "'<='", 
			"'>='", "'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACKET", "RIGHT_BRACKET", 
			"LEFT_CURLY", "RIGHT_CURLY", "QUESTION_MARK", "DOT", "COLON", "ASTERISK", 
			"DIVISION_OP", "MOD_OP", "PLUS", "MINUS", "CONTEXT_VARIABLE", "CURRENT_VARIABLE", 
			"AND_OP", "OR_OP", "NOT_OP", "IN_OP", "EQUALITY_OP", "INEQUALITY_OP", 
			"LT_OP", "GT_OP", "LTE_OP", "GTE_OP", "TRUE", "FALSE", "DECIMAL_VALUE", 
			"INTEGER_VALUE", "STRING", "IDENTIFIER", "WS", "ANY"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "VirtualFieldPath.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public VirtualFieldPathParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class MountedPathContext extends ParserRuleContext {
		public MountPointContext mountPoint() {
			return getRuleContext(MountPointContext.class,0);
		}
		public RowSelectorAwareFieldPathContext rowSelectorAwareFieldPath() {
			return getRuleContext(RowSelectorAwareFieldPathContext.class,0);
		}
		public TerminalNode EOF() { return getToken(VirtualFieldPathParser.EOF, 0); }
		public MountedPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mountedPath; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VirtualFieldPathListener ) ((VirtualFieldPathListener)listener).enterMountedPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VirtualFieldPathListener ) ((VirtualFieldPathListener)listener).exitMountedPath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VirtualFieldPathVisitor ) return ((VirtualFieldPathVisitor<? extends T>)visitor).visitMountedPath(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MountedPathContext mountedPath() throws RecognitionException {
		MountedPathContext _localctx = new MountedPathContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mountedPath);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			mountPoint();
			setState(43);
			rowSelectorAwareFieldPath();
			setState(44);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RowSelectorAwareFieldPathContext extends ParserRuleContext {
		public FieldReferenceExprContext fieldReferenceExpr() {
			return getRuleContext(FieldReferenceExprContext.class,0);
		}
		public TerminalNode EOF() { return getToken(VirtualFieldPathParser.EOF, 0); }
		public RowSelectorContext rowSelector() {
			return getRuleContext(RowSelectorContext.class,0);
		}
		public RowSelectorAwareFieldPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rowSelectorAwareFieldPath; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VirtualFieldPathListener ) ((VirtualFieldPathListener)listener).enterRowSelectorAwareFieldPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VirtualFieldPathListener ) ((VirtualFieldPathListener)listener).exitRowSelectorAwareFieldPath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VirtualFieldPathVisitor ) return ((VirtualFieldPathVisitor<? extends T>)visitor).visitRowSelectorAwareFieldPath(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RowSelectorAwareFieldPathContext rowSelectorAwareFieldPath() throws RecognitionException {
		RowSelectorAwareFieldPathContext _localctx = new RowSelectorAwareFieldPathContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_rowSelectorAwareFieldPath);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LEFT_BRACKET) {
				{
				setState(46);
				rowSelector();
				}
			}

			setState(49);
			fieldReferenceExpr(0);
			setState(50);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VirtualFieldPathContext extends ParserRuleContext {
		public FieldReferenceExprContext fieldReferenceExpr() {
			return getRuleContext(FieldReferenceExprContext.class,0);
		}
		public TerminalNode EOF() { return getToken(VirtualFieldPathParser.EOF, 0); }
		public VirtualFieldPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_virtualFieldPath; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VirtualFieldPathListener ) ((VirtualFieldPathListener)listener).enterVirtualFieldPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VirtualFieldPathListener ) ((VirtualFieldPathListener)listener).exitVirtualFieldPath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VirtualFieldPathVisitor ) return ((VirtualFieldPathVisitor<? extends T>)visitor).visitVirtualFieldPath(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VirtualFieldPathContext virtualFieldPath() throws RecognitionException {
		VirtualFieldPathContext _localctx = new VirtualFieldPathContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_virtualFieldPath);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			fieldReferenceExpr(0);
			setState(53);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MountPointContext extends ParserRuleContext {
		public TerminalNode LEFT_BRACKET() { return getToken(VirtualFieldPathParser.LEFT_BRACKET, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(VirtualFieldPathParser.LEFT_PAREN, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(VirtualFieldPathParser.RIGHT_PAREN, 0); }
		public TerminalNode RIGHT_BRACKET() { return getToken(VirtualFieldPathParser.RIGHT_BRACKET, 0); }
		public RowSelectorContext rowSelector() {
			return getRuleContext(RowSelectorContext.class,0);
		}
		public FieldReferenceExprContext fieldReferenceExpr() {
			return getRuleContext(FieldReferenceExprContext.class,0);
		}
		public MountPointContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mountPoint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VirtualFieldPathListener ) ((VirtualFieldPathListener)listener).enterMountPoint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VirtualFieldPathListener ) ((VirtualFieldPathListener)listener).exitMountPoint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VirtualFieldPathVisitor ) return ((VirtualFieldPathVisitor<? extends T>)visitor).visitMountPoint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MountPointContext mountPoint() throws RecognitionException {
		MountPointContext _localctx = new MountPointContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mountPoint);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(LEFT_BRACKET);
			setState(56);
			match(T__0);
			setState(57);
			match(LEFT_PAREN);
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LEFT_BRACKET) {
				{
				setState(58);
				rowSelector();
				}
			}

			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONTEXT_VARIABLE || _la==CURRENT_VARIABLE) {
				{
				setState(61);
				fieldReferenceExpr(0);
				}
			}

			setState(64);
			match(RIGHT_PAREN);
			setState(65);
			match(RIGHT_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RowSelectorContext extends ParserRuleContext {
		public CollectionPredicateContext collectionPredicate() {
			return getRuleContext(CollectionPredicateContext.class,0);
		}
		public RowSelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rowSelector; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VirtualFieldPathListener ) ((VirtualFieldPathListener)listener).enterRowSelector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VirtualFieldPathListener ) ((VirtualFieldPathListener)listener).exitRowSelector(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VirtualFieldPathVisitor ) return ((VirtualFieldPathVisitor<? extends T>)visitor).visitRowSelector(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RowSelectorContext rowSelector() throws RecognitionException {
		RowSelectorContext _localctx = new RowSelectorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_rowSelector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			collectionPredicate();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldReferenceExprContext extends ParserRuleContext {
		public FieldReferenceExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldReferenceExpr; }
	 
		public FieldReferenceExprContext() { }
		public void copyFrom(FieldReferenceExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FieldRefExprDefaultContext extends FieldReferenceExprContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public FieldRefExprDefaultContext(FieldReferenceExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VirtualFieldPathListener ) ((VirtualFieldPathListener)listener).enterFieldRefExprDefault(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VirtualFieldPathListener ) ((VirtualFieldPathListener)listener).exitFieldRefExprDefault(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VirtualFieldPathVisitor ) return ((VirtualFieldPathVisitor<? extends T>)visitor).visitFieldRefExprDefault(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MemberRefContext extends FieldReferenceExprContext {
		public FieldReferenceExprContext fieldReferenceExpr() {
			return getRuleContext(FieldReferenceExprContext.class,0);
		}
		public TerminalNode DOT() { return getToken(VirtualFieldPathParser.DOT, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public MemberRefContext(FieldReferenceExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VirtualFieldPathListener ) ((VirtualFieldPathListener)listener).enterMemberRef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VirtualFieldPathListener ) ((VirtualFieldPathListener)listener).exitMemberRef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VirtualFieldPathVisitor ) return ((VirtualFieldPathVisitor<? extends T>)visitor).visitMemberRef(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LookupRefContext extends FieldReferenceExprContext {
		public FieldReferenceExprContext fieldReferenceExpr() {
			return getRuleContext(FieldReferenceExprContext.class,0);
		}
		public TerminalNode LEFT_BRACKET() { return getToken(VirtualFieldPathParser.LEFT_BRACKET, 0); }
		public TerminalNode RIGHT_BRACKET() { return getToken(VirtualFieldPathParser.RIGHT_BRACKET, 0); }
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public LookupRefContext(FieldReferenceExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VirtualFieldPathListener ) ((VirtualFieldPathListener)listener).enterLookupRef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VirtualFieldPathListener ) ((VirtualFieldPathListener)listener).exitLookupRef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VirtualFieldPathVisitor ) return ((VirtualFieldPathVisitor<? extends T>)visitor).visitLookupRef(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StreamRefContext extends FieldReferenceExprContext {
		public FieldReferenceExprContext fieldReferenceExpr() {
			return getRuleContext(FieldReferenceExprContext.class,0);
		}
		public TerminalNode LEFT_BRACKET() { return getToken(VirtualFieldPathParser.LEFT_BRACKET, 0); }
		public TerminalNode COLON() { return getToken(VirtualFieldPathParser.COLON, 0); }
		public TerminalNode RIGHT_BRACKET() { return getToken(VirtualFieldPathParser.RIGHT_BRACKET, 0); }
		public StreamRefContext(FieldReferenceExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VirtualFieldPathListener ) ((VirtualFieldPathListener)listener).enterStreamRef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VirtualFieldPathListener ) ((VirtualFieldPathListener)listener).exitStreamRef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VirtualFieldPathVisitor ) return ((VirtualFieldPathVisitor<? extends T>)visitor).visitStreamRef(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FilterRefContext extends FieldReferenceExprContext {
		public FieldReferenceExprContext fieldReferenceExpr() {
			return getRuleContext(FieldReferenceExprContext.class,0);
		}
		public CollectionPredicateContext collectionPredicate() {
			return getRuleContext(CollectionPredicateContext.class,0);
		}
		public FilterRefContext(FieldReferenceExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VirtualFieldPathListener ) ((VirtualFieldPathListener)listener).enterFilterRef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VirtualFieldPathListener ) ((VirtualFieldPathListener)listener).exitFilterRef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VirtualFieldPathVisitor ) return ((VirtualFieldPathVisitor<? extends T>)visitor).visitFilterRef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldReferenceExprContext fieldReferenceExpr() throws RecognitionException {
		return fieldReferenceExpr(0);
	}

	private FieldReferenceExprContext fieldReferenceExpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		FieldReferenceExprContext _localctx = new FieldReferenceExprContext(_ctx, _parentState);
		FieldReferenceExprContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_fieldReferenceExpr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new FieldRefExprDefaultContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(70);
			variable();
			}
			_ctx.stop = _input.LT(-1);
			setState(91);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(89);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new MemberRefContext(new FieldReferenceExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_fieldReferenceExpr);
						setState(72);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(73);
						match(DOT);
						setState(74);
						identifier();
						}
						break;
					case 2:
						{
						_localctx = new LookupRefContext(new FieldReferenceExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_fieldReferenceExpr);
						setState(75);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(76);
						match(LEFT_BRACKET);
						setState(79);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case MINUS:
						case TRUE:
						case FALSE:
						case DECIMAL_VALUE:
						case INTEGER_VALUE:
						case STRING:
							{
							setState(77);
							literal();
							}
							break;
						case IDENTIFIER:
							{
							setState(78);
							functionCall();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(81);
						match(RIGHT_BRACKET);
						}
						break;
					case 3:
						{
						_localctx = new StreamRefContext(new FieldReferenceExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_fieldReferenceExpr);
						setState(83);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(84);
						match(LEFT_BRACKET);
						setState(85);
						match(COLON);
						setState(86);
						match(RIGHT_BRACKET);
						}
						break;
					case 4:
						{
						_localctx = new FilterRefContext(new FieldReferenceExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_fieldReferenceExpr);
						setState(87);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(88);
						collectionPredicate();
						}
						break;
					}
					} 
				}
				setState(93);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class CollectionPredicateContext extends ParserRuleContext {
		public TerminalNode LEFT_BRACKET() { return getToken(VirtualFieldPathParser.LEFT_BRACKET, 0); }
		public TerminalNode QUESTION_MARK() { return getToken(VirtualFieldPathParser.QUESTION_MARK, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(VirtualFieldPathParser.LEFT_PAREN, 0); }
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public TerminalNode RIGHT_PAREN() { return getToken(VirtualFieldPathParser.RIGHT_PAREN, 0); }
		public TerminalNode RIGHT_BRACKET() { return getToken(VirtualFieldPathParser.RIGHT_BRACKET, 0); }
		public CollectionPredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_collectionPredicate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VirtualFieldPathListener ) ((VirtualFieldPathListener)listener).enterCollectionPredicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VirtualFieldPathListener ) ((VirtualFieldPathListener)listener).exitCollectionPredicate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VirtualFieldPathVisitor ) return ((VirtualFieldPathVisitor<? extends T>)visitor).visitCollectionPredicate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CollectionPredicateContext collectionPredicate() throws RecognitionException {
		CollectionPredicateContext _localctx = new CollectionPredicateContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_collectionPredicate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(LEFT_BRACKET);
			setState(95);
			match(QUESTION_MARK);
			setState(96);
			match(LEFT_PAREN);
			setState(97);
			predicate(0);
			setState(98);
			match(RIGHT_PAREN);
			setState(99);
			match(RIGHT_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
